# MUAV_GCS_gz

./: CMakeLists.txt  README.md  package.xml
config/: scene.yaml  scene_aux.yaml
hooks/: muav_gcs_gz.dsv.in  muav_gcs_gz.sh.in
launch/: scene.launch.py  simulation.launch.py  spawn_px4.launch.py  startup.launch.py  twoDrones.launch.py
models/grass_floor/: model.config  model.sdf
models/grass_floor_textured/: model.config  model.sdf
models/grass_floor_textured/materials/: grass_tiled.material  plane_tiled.dae
models/ground_grass/: model.config  model.sdf
models/uav_base/: model.config  model.sdf
models/uav_base/meshes/: uav_base.mtl
models/wind_turbine/: model.config  model.sdf  model_simplified.sdf
models/wind_turbine30m/: model.config  model.sdf
models/wind_turbine80m/: model.config  model.sdf
models/windgeneratorbasic/: model.config  model.sdf
models/windgeneratorbasic/meshes/: windTurbineBasic.mtl
scripts/: calculate_magnetic_field.py  diagnose_px4.py  startup_spawner.py
world/: plazaAgua.sdf  template.sdf
