<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>muav_gcs_gz</name>
  <version>2025.2.1</version>
  <description>TODO: Package description</description>
  <maintainer email="arpoma@us.es">Alvaro Poma</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ros_gz</exec_depend>
  <depend>gz_ros2_control</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>